Fixes a cosmetic bug when "date" columns in "Recent Tweets", "Latest Commits" or "Mailing List" sections, are too high.

--- a/static/css/cherokee.css
+++ b/static/css/cherokee.css
@@ -383,6 +383,7 @@ ul.list li {
 
 .tweet, .commit, .mail {
   margin-bottom: 15px;
+  clear: both;
 }
 
 .date {
